# gpr-200-fa2024-annabelle-thompson

./: desktop.ini
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment1_helloTriangle/assets/Shader/: fShader.txt  vShader.txt
assignments/assignment1_helloTriangle/assets/shaderAssets/: fShader.frag
assignments/assignment2/: main.cpp
assignments/assignment2/assets/shaderAssets/: bgfShader.frag  bgvShader.vert  fShader.frag  vShader.vert
assignments/assignment4/: main.cpp
assignments/assignment4/assets/shaderAssets/: bgvShader.vert  fShader.frag
assignments/assignment5/: desktop.ini  main.cpp
assignments/assignment5/assets/shaderAssets/: basicLightingFShader.frag  basicLightingVShader.vert  lampFShader.frag
core/: CMakeLists.txt
core/Camera/: Camera.cpp  Camera.h
core/Shader/: Shader.cpp  Shader.h
core/Texture/: Texture.cpp  Texture.h
